
add_library(EvtGenBase SHARED 
Evt3Rank3C.cc
EvtAbsLineShape.cc
EvtAmp.cc
EvtAmpIndex.cc
EvtAmpSubIndex.cc
EvtBlattWeisskopf.cc
EvtBreitWignerPdf.cc
EvtCGCoefSingle.cc
EvtCPUtil.cc
EvtComplex.cc
EvtConst.cc
EvtCyclic3.cc
EvtDalitzCoord.cc
EvtDalitzFlatPdf.cc
EvtDalitzPlot.cc
EvtDalitzPoint.cc
EvtDalitzResPdf.cc
EvtDalitzReso.cc
EvtDecayAmp.cc
EvtDecayBase.cc
EvtDecayIncoherent.cc
EvtDecayMode.cc
EvtDecayParm.cc
EvtDecayProb.cc
EvtDecayTable.cc
EvtDiracParticle.cc
EvtDiracSpinor.cc
EvtEvalHelAmp.cc
EvtFlatLineShape.cc
EvtGammaMatrix.cc
EvtGenKine.cc
EvtHighSpinParticle.cc
EvtId.cc
EvtIdSet.cc
EvtIntegPdf1D.cc
EvtIntervalFlatPdf.cc
EvtKine.cc
EvtLASSAmp.cc
EvtMBreitWigner.cc
EvtMHelAmp.cc
EvtMNode.cc
EvtMParticle.cc
EvtMRes.cc
EvtMTree.cc
EvtMTrivialLS.cc
EvtManyDeltaFuncLineShape.cc
EvtMassAmp.cc
EvtModel.cc
EvtModelAlias.cc
EvtMultiChannelParser.cc
EvtNeutrinoParticle.cc
EvtNonresonantAmp.cc
EvtOrthogVector.cc
EvtPDL.cc
EvtParser.cc
EvtPartProp.cc
EvtParticle.cc
EvtParticleDecay.cc
EvtParticleDecayList.cc
EvtParticleFactory.cc
EvtPhotonParticle.cc
EvtPoint1D.cc
EvtPropBreitWigner.cc
EvtPropBreitWignerRel.cc
EvtPropFlatte.cc
EvtPropGounarisSakurai.cc
EvtPto3PAmp.cc
EvtPto3PAmpFactory.cc
EvtPto3PAmpSmpResolution.cc
EvtRadCorr.cc
EvtRanFor.cc
EvtRandom.cc
EvtRaritaSchwinger.cc
EvtRaritaSchwingerParticle.cc
EvtRelBreitWignerBarrierFact.cc
EvtReport.cc
EvtResonance.cc
EvtResonance2.cc
EvtScalarParticle.cc
EvtSecondary.cc
EvtSemiLeptonicAmp.cc
EvtSemiLeptonicBaryonAmp.cc
EvtSemiLeptonicScalarAmp.cc
EvtSemiLeptonicTensorAmp.cc
EvtSemiLeptonicVectorAmp.cc
EvtSimpleRandomEngine.cc
EvtSpinAmp.cc
EvtSpinDensity.cc
EvtStdHep.cc
EvtStringParticle.cc
EvtSymTable.cc
EvtTensor3C.cc
EvtTensor4C.cc
EvtTensorParticle.cc
EvtTwoBodyKine.cc
EvtTwoBodyVertex.cc
EvtValError.cc
EvtVector3C.cc
EvtVector3R.cc
EvtVector4C.cc
EvtVector4R.cc
EvtVectorParticle.cc
EvtdFunction.cc
EvtdFunctionSingle.cc
)
target_link_libraries(EvtGenBase  )

# set top-level directory as include root
target_include_directories(EvtGenBase PRIVATE ${CLHEP_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR})

# set shared library version equal to project version
set_target_properties(EvtGenBase PROPERTIES VERSION ${PROJECT_VERSION})
